# vrep_custom_scenes

./: .gitignore  README.md
JAI2015/aula1/: pioneer_square_medium_wall.ttt
JAI2015/aula2/: pioneer_square_medium_wall.ttt
fosorio/: GPS-Compass.ttt  Pioneer-Posicao-e-Orientacao(+GPS).ttt  Pioneer-Sonar-Motor-Signal.ttt  Pioneer-Sonar-StatusBar.ttt  Pionner-Keyboard-Status.ttt
fosorio/JAI2015/aula2/RemoteAPI_cpp/: CMakeLists.txt  FindThreads.cmake
fosorio/JAI2015/aula2/RemoteAPI_cpp/src/: main.cpp  main.cpp.bak
fosorio/Trabalho-CP-Grad/: TP-CP-Cenario01-2020.ttt  TP-CP-Cenario01-2020_backup.ttt  TP-CP-Cenario01-2020_nick.ttt  TP-CP-Cenario01-2020_nick_lua.lua  TP-CP-Cenario01-2020_nick_python.ttt  TP-CP-Cenario01-2020_python.ttt  TP-CP-Cenario02-2020_nick_python.ttt  TP-CP-Cenario03-2020_nick_python.ttt  todo.md
fosorio/Trabalho-CP-Grad/RemoteAPI_python/: TP-CP-Cenario02-2020.lua  d_star_lite.py  grid.py  remoteApi_pioneer.py  remoteApi_pioneer_trab_final.py  remoteApi_pioneer_trab_final_threaded.py  remoteApi_pioneer_wander.py  (+4 more)
fosorio/examples/: Grab-Kinect05.ttt  Pioneer-Sonar-GravaLOG.ttt  Pioneer-Sonar.ttt  Pioneer-TeleOperated.ttt  World-Sick180-Log.ttt  decode_kinect.py
my_scenes/: grab-kinect.ttt  pioneer_square_medium_wall.ttt
nicolasrosa/: pioneer_square_low_wall.ttt  pioneer_square_medium_wall_v2_teleop.ttt
nicolasrosa/examples/: pioneer_square_medium_wall_v2_wander.ttt
nicolasrosa/trab_final/: TP-CP-Cenario01-2020_nick_python.ttt  TP-CP-Cenario02-2020_nick_python.ttt  TP-CP-Cenario03-2020_nick_python.ttt  TP-CP-Cenario04-2020_nick_python.ttt
(+27 files in other folders)
